[project]
name = "linebot-app"
version = "0.0.1"
description = "LINE bot app"
requires-python = ">=3.11,<3.12"

# Declare runtime dependencies so pip/PEP-621-aware installers (and Vercel) install them.
dependencies = [
	"line-bot-sdk==2.4.1",
	"flask==2.2.2",
	"python-dotenv==0.21.1",
	"werkzeug==2.2.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
